--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_height="49dp"
         android:ems="10"
         android:hint="Number 1"
-        android:inputType="number"
+        android:inputType="numberSigned"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.557"
@@ -51,9 +51,10 @@
         android:id="@+id/btnAdd"
         android:layout_width="189dp"
         android:layout_height="44dp"
-        android:background="#673AB7"
-        android:backgroundTint="#673AB7"
+        android:background="#FFE4D975"
+        android:backgroundTint="#FFE4D975"
         android:text="ADDITION"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -65,8 +66,9 @@
         android:id="@+id/btnSub"
         android:layout_width="189dp"
         android:layout_height="44dp"
-        android:background="#673AB7"
+        android:background="#FFE4D975"
         android:text="SUBTRACTION"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/btnStats"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -78,8 +80,9 @@
         android:id="@+id/btnMult"
         android:layout_width="189dp"
         android:layout_height="44dp"
-        android:background="#673AB7"
+        android:background="#FFE4D975"
         android:text="MULTIPLICATION"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,8 +93,9 @@
         android:id="@+id/btnDiv"
         android:layout_width="189dp"
         android:layout_height="44dp"
-        android:background="#673AB7"
+        android:background="#FFE4D975"
         android:text="DIVISION"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/btnStats"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -103,8 +107,9 @@
         android:id="@+id/btnSquRoot"
         android:layout_width="189dp"
         android:layout_height="44dp"
-        android:background="#673AB7"
+        android:background="#FFE4D975"
         android:text="SQUARE ROOT"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -116,8 +121,9 @@
         android:id="@+id/btnPower"
         android:layout_width="189dp"
         android:layout_height="44dp"
-        android:background="#673AB7"
+        android:background="#E4D975"
         android:text="POWER"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,8 +134,9 @@
         android:id="@+id/btnStats"
         android:layout_width="211dp"
         android:layout_height="53dp"
-        android:background="#673AB7"
+        android:background="#FFE4D975"
         android:text="STATISTICS FUNCTIONS"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.56"
@@ -151,12 +158,12 @@
 
     <EditText
         android:id="@+id/etResult"
-        android:layout_width="227dp"
-        android:layout_height="83dp"
+        android:layout_width="411dp"
+        android:layout_height="73dp"
         android:ems="10"
         android:hint="Result"
         android:inputType="text"
-        android:textSize="30sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.085"
@@ -168,15 +175,27 @@
         android:id="@+id/tvHeader"
         android:layout_width="419dp"
         android:layout_height="63dp"
-        android:background="#673AB7"
+        android:background="#FFE4D975"
         android:paddingLeft="14dp"
         android:paddingTop="19dp"
         android:text="Calculator"
-        android:textAlignment="inherit"
-        android:textColor="#FFFEFE"
+        android:textAlignment="center"
+        android:textColor="#2E2E2B"
         android:textSize="16sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="57dp"
+        android:layout_height="64dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.016"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/calc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
